# app/Http/Controllers/Annotations/AuthentificationAnnotationController.php
@@ -1,0 +1,60 @@
+<?php
+
+namespace App\Http\Controllers\Annotations ;
+
+/**
+ * @OA\Security(
+ *     security={
+ *         "BearerAuth": {}
+ *     }),
+
+ * @OA\SecurityScheme(
+ *     securityScheme="BearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"),
+
+ * @OA\Info(
+ *     title="Your API Title",
+ *     description="Your API Description",
+ *     version="1.0.0"),
+
+ * @OA\Consumes({
+ *     "multipart/form-data"
+ * }),
+
+ *
+
+ * @OA\POST(
+ *     path="/api/login",
+ *     summary="login",
+ *     description="",
+ *         security={
+ *    {       "BearerAuth": {}}
+ *         },
+ * @OA\Response(response="201", description="Created successfully"),
+ * @OA\Response(response="400", description="Bad Request"),
+ * @OA\Response(response="401", description="Unauthorized"),
+ * @OA\Response(response="403", description="Forbidden"),
+ *     @OA\Parameter(in="header", name="User-Agent", required=false, @OA\Schema(type="string")
+ * ),
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\MediaType(
+ *             mediaType="multipart/form-data",
+ *             @OA\Schema(
+ *                 type="object",
+ *                 properties={
+ *                     @OA\Property(property="email", type="string"),
+ *                     @OA\Property(property="password", type="string"),
+ *                 },
+ *             ),
+ *         ),
+ *     ),
+ *     tags={"Authentification"},
+*),
+
+
+*/
+
+ class AuthentificationAnnotationController {}
